--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 2.8.8)
 find_package(Qt5Core)
 find_package(Qt5Xml)
 find_package(Qt5DBus)
+find_package(Qt5Network)
 find_package(X11)
 #find_package(Qt5Widgets)
 SET(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "-lX11")
@@ -13,10 +14,10 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 # Instruct CMake to run moc automatically when needed.
 set(CMAKE_AUTOMOC ON)
 
-set(INPUTMANGLER_SRCS main.cpp inputmangler.cpp abstractinputhandler.cpp devhandler.cpp qtsignalhandler.cpp imdbusinterface.cpp keydefs.cpp)
+set(INPUTMANGLER_SRCS main.cpp inputmangler.cpp abstractinputhandler.cpp devhandler.cpp qtsignalhandler.cpp imdbusinterface.cpp keydefs.cpp nethandler.cpp)
 
 add_executable(inputmangler ${INPUTMANGLER_SRCS})
 
 install(TARGETS inputmangler RUNTIME DESTINATION bin)
 
-qt5_use_modules(inputmangler Core Xml DBus)
+qt5_use_modules(inputmangler Core Xml DBus Network)
