--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,8 +45,12 @@ add_executable(inputmangler ${INPUTMANGLER_SRCS})
 
 install(TARGETS inputmangler RUNTIME DESTINATION bin)
 FILE(GLOB keymaps "${CMAKE_CURRENT_SOURCE_DIR}/keymaps/*")
+INSTALL(FILES ${keymaps} DESTINATION share/inputmangler/keymaps/)
+FILE(GLOB doc "${CMAKE_CURRENT_SOURCE_DIR}/doc/*")
+INSTALL(FILES ${keymaps} DESTINATION share/doc/inputmangler/)
+FILE(GLOB scripts "${CMAKE_CURRENT_SOURCE_DIR}/scripts/*")
 INSTALL(FILES ${keymaps} DESTINATION share/inputmangler/)
-# TODO: doc
+
 qt5_use_modules(inputmangler Core Xml DBus Network Test)
 
 #add_definitions( -DDEBUGME )
