First steps to a package...

--- a/inputdummy/Makefile
+++ b/inputdummy/Makefile
@@ -8,6 +8,7 @@ clean:
 	make -C /lib/modules/${KVERSION}/build M=$(PWD) clean
 
 install:
-	install -m 0644 *.ko /lib/modules/${KVERSION}/kernel/drivers/input
-	install -m 0644 *.ko /lib/modules/${KVERSION}/updates/dkms/inputdummy.ko
+	install -m 0644 inputdummy.ko /lib/modules/${KVERSION}/kernel/drivers/input
+	install -m 0644 inputdummy.ko /lib/modules/${KVERSION}/updates/dkms/inputdummy.ko
+	install -m 0644 98-inputdummy.rules /etc/udev/rules.d/98-inputdummy.rules
 	depmod -a
