Firstrun Wizard (not complete yet); code cleanup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,10 @@ project(inputmangler)
 cmake_minimum_required(VERSION 2.8.11)
 
 
+ADD_DEFINITIONS(
+        -std=c++11
+)
+
 add_subdirectory(src)
+add_subdirectory(firstrun)
+
