fixes for CPack

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -90,7 +90,8 @@ SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/meta/description")
 execute_process(COMMAND dpkg --print-architecture OUTPUT_VARIABLE TMPOUT)
 string(STRIP ${TMPOUT} CPACK_DEBIAN_PACKAGE_ARCHITECTURE)
 SET(CPACK_SYSTEM_NAME ${CPACK_DEBIAN_PACKAGE_ARCHITECTURE})
-execute_process(COMMAND tail -n1 ${CMAKE_SOURCE_DIR}/meta/depends OUTPUT_VARIABLE CPACK_DEBIAN_PACKAGE_DEPENDS)
+execute_process(COMMAND tail -n1 ${CMAKE_SOURCE_DIR}/meta/depends OUTPUT_VARIABLE TMPOUT)
+string(STRIP ${TMPOUT} CPACK_DEBIAN_PACKAGE_DEPENDS)
 SET(CPACK_DEBIAN_PACKAGE_SECTION "misc")
 SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
 SET(CPACK_DEBIAN_PACKAGE_RECOMMENDS "")
