--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -11,25 +11,21 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 # Instruct CMake to run moc automatically when needed.
 set(CMAKE_AUTOMOC ON)
 SET(CMAKE_AUTOUIC ON)
-set(FIRSTRUN_UIS
-        firstrun.ui
+set(IMGUI_UIS
+        inputmanglerui.ui
         )
-set(FIRSTRUN_SRCS
-        FirstRunWizard.cpp
-        UdevRules.cpp
+set(IMGUI_SRCS
+        inputmanglerui.cpp
         main.cpp
-        ../shared/definitions.h
-        ../shared/keydefs.cpp
-        ../shared/inputevent.cpp
-        )
+        imconfmodel.cpp imconfmodel.h)
 
-qt5_wrap_ui(${FIRSTRUN_UIS})
+qt5_wrap_ui(${IMGUI_UIS})
 find_library(PUGIXML_LIB pugixml)
 #add_library(pugixml SHARED IMPORTED)
-add_executable(inputmangler_firstrun_wizard ${FIRSTRUN_SRCS} ${FIRSTRUN_UIS})
-target_link_libraries(inputmangler_firstrun_wizard pugixml)
+add_executable(inputmangler_ui ${IMGUI_SRCS} ${IMGUI_UIS})
+target_link_libraries(inputmangler_ui pugixml)
 
-install(TARGETS inputmangler_firstrun_wizard RUNTIME DESTINATION bin)
+install(TARGETS inputmangler_ui RUNTIME DESTINATION bin)
 #FILE(GLOB keymaps "${CMAKE_CURRENT_SOURCE_DIR}/../keymaps/*")
 #INSTALL(FILES ${keymaps} DESTINATION share/inputmangler/keymaps/)
 #FILE(GLOB doc "${CMAKE_CURRENT_SOURCE_DIR}/../doc/*")
@@ -37,6 +33,6 @@ install(TARGETS inputmangler_firstrun_wizard RUNTIME DESTINATION bin)
 #FILE(GLOB scripts "${CMAKE_CURRENT_SOURCE_DIR}/../scripts/*")
 #INSTALL(PROGRAMS ${scripts} DESTINATION share/inputmangler/)
 
-qt5_use_modules(inputmangler_firstrun_wizard  Core DBus Widgets)
+qt5_use_modules(inputmangler_ui  Core DBus Widgets)
 
 #add_definitions( -DDEBUGME )
