Update CMakeLists to newer version; fix bug in DBUS interface; cleanup; workaround for double wheel events

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,9 @@
 project(inputmangler)
-cmake_minimum_required(VERSION 2.8.11)
 
+cmake_minimum_required(VERSION 3.1)
 
-ADD_DEFINITIONS(
-        -std=c++11
-)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_subdirectory(src)
 add_subdirectory(firstrun)
