--- a/firstrun/CMakeLists.txt
+++ b/firstrun/CMakeLists.txt
@@ -1,9 +1,7 @@
 #project(inputmangler)
 #cmake_minimum_required(VERSION 2.8.11)
 
-find_package(Qt5Core)
-find_package(Qt5DBus)
-find_package(Qt5Widgets)
+find_package(Qt5 COMPONENTS Core DBus Widgets REQUIRED)
 
 
 # Find includes in corresponding build directories
@@ -27,7 +25,7 @@ qt5_wrap_ui(${FIRSTRUN_UIS})
 find_library(PUGIXML_LIB pugixml)
 #add_library(pugixml SHARED IMPORTED)
 add_executable(inputmangler_firstrun_wizard ${FIRSTRUN_SRCS} ${FIRSTRUN_UIS})
-target_link_libraries(inputmangler_firstrun_wizard pugixml)
+target_link_libraries(inputmangler_firstrun_wizard pugixml Qt5::Core Qt5::Widgets Qt5::DBus)
 
 install(TARGETS inputmangler_firstrun_wizard RUNTIME DESTINATION bin)
 #FILE(GLOB keymaps "${CMAKE_CURRENT_SOURCE_DIR}/../keymaps/*")
@@ -36,7 +34,5 @@ install(TARGETS inputmangler_firstrun_wizard RUNTIME DESTINATION bin)
 #INSTALL(FILES ${doc} DESTINATION share/doc/inputmangler/)
 #FILE(GLOB scripts "${CMAKE_CURRENT_SOURCE_DIR}/../scripts/*")
 #INSTALL(PROGRAMS ${scripts} DESTINATION share/inputmangler/)
-
-qt5_use_modules(inputmangler_firstrun_wizard  Core DBus Widgets)
 
 #add_definitions( -DDEBUGME )
