--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -1,10 +1,7 @@
 #project(inputmangler)
 #cmake_minimum_required(VERSION 2.8.11)
 
-find_package(Qt5Core)
-find_package(Qt5DBus)
-find_package(Qt5Widgets)
-
+find_package(Qt5 COMPONENTS Core DBus Widgets REQUIRED)
 
 # Find includes in corresponding build directories
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -33,7 +30,7 @@ qt5_wrap_ui(${IMGUI_UIS})
 find_library(PUGIXML_LIB pugixml)
 #add_library(pugixml SHARED IMPORTED)
 add_executable(inputmangler_ui ${IMGUI_SRCS} ${IMGUI_UIS} ${IMGUI_HEADERS})
-target_link_libraries(inputmangler_ui pugixml)
+target_link_libraries(inputmangler_ui pugixml Qt5::Core Qt5::Widgets Qt5::DBus)
 
 install(TARGETS inputmangler_ui RUNTIME DESTINATION bin)
 #FILE(GLOB keymaps "${CMAKE_CURRENT_SOURCE_DIR}/../keymaps/*")
@@ -42,7 +39,5 @@ install(TARGETS inputmangler_ui RUNTIME DESTINATION bin)
 #INSTALL(FILES ${doc} DESTINATION share/doc/inputmangler/)
 #FILE(GLOB scripts "${CMAKE_CURRENT_SOURCE_DIR}/../scripts/*")
 #INSTALL(PROGRAMS ${scripts} DESTINATION share/inputmangler/)
-
-qt5_use_modules(inputmangler_ui  Core DBus Widgets)
 
 #add_definitions( -DDEBUGME )
